--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,6 +33,15 @@
 .font-icon{
 	font-size: 0.8rem !important;
 }
+.ltr{
+	direction: ltr;
+}
+.text-olive{
+	color: #94B426;
+}
+.text-orange{
+	color: #EE7B26;
+}
 .w-20{
 	width: 20%;
 }
