--- a/app/views/options/show.html.erb
+++ b/app/views/options/show.html.erb
@@ -5,11 +5,6 @@
   <%= @option.title %>
 </p>
 
-<!-- <p>
-  <strong>Operator:</strong>
-  <%# @option.operator %>
-</p> -->
-
 <p>
   <strong>Amount:</strong>
   <%= @option.amount %>
@@ -18,6 +13,16 @@
 <p>
   <strong>On_what:</strong>
   <%= @option.on_what %>
+</p>
+
+<p>
+  <strong>Amount2:</strong>
+  <%= @option.amount2 %>
+</p>
+
+<p>
+  <strong>On_what2:</strong>
+  <%= @option.on_what2 %>
 </p>
 
 <p>
