--- a/app/views/application/game_over.html.erb
+++ b/app/views/application/game_over.html.erb
@@ -51,6 +51,13 @@
       <% else %>
         <p class="card-text event-title text-danger"><%= option.amount.abs.to_s + "- " + Country.human_attribute_name(option.on_what) %></p>
       <% end %>
+      <% if option.amount2.present? %>
+        <% if option.amount2 > 0 %>
+          <p class="card-text text-success"><%= option.amount2.abs.to_s + "+ " + Country.human_attribute_name(option.on_what2) %></p>
+        <% else %>
+          <p class="card-text text-danger"><%= option.amount2.abs.to_s + "- " + Country.human_attribute_name(option.on_what2) %></p>
+        <% end %>
+      <% end %>
     </div>
     <% end %>
   </div>
