--- a/app/views/options/index.html.erb
+++ b/app/views/options/index.html.erb
@@ -6,9 +6,10 @@
   <thead>
     <tr>
       <th>Title</th>
-      <!-- <th>Operator</th> -->
       <th>Amount</th>
       <th>On_what</th>
+      <th>Amount2</th>
+      <th>On_what2</th>
       <th>Event</th>
       <th>Min resilience</th>
       <th>Min budget</th>
@@ -30,9 +31,10 @@
     <% @options.each do |option| %>
       <tr>
         <td><%= option.title %></td>
-        <!-- <td><%# option.operator %></td> -->
         <td><%= option.amount %></td>
         <td><%= option.on_what %></td>
+        <td><%= option.amount2 %></td>
+        <td><%= option.on_what2 %></td>
         <td><%= option.event.title %></td>
         <td><%= option.min_resilience %></td>
         <td><%= option.min_budget %></td>
