no ceiling on options if attribute is max cant add to it

--- a/app/views/application/game_over.html.erb
+++ b/app/views/application/game_over.html.erb
@@ -36,6 +36,9 @@
   <div class="">
     <%= t('country.game_over.war') if @country.is_conquered %>
   </div>
+	<div class="">
+		<%= t('country.game_over.no_more_events') if Event.where("min_deg <= ?", @country.deg).where.not(id: @country.events).sample == nil %>
+	</div>
   <div class="">
     <h3><%= t('country.game_over.options') %></h3>
     <% @country.options.uniq.each do |option| %>
