--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,8 +2,17 @@
   <div class="card-body">
     <h5 class="card-title"><%= @event.title %></h5>
     <p class="card-text"><%= @event.description %></p>
+    <p class="card-text">
+      <% if @event.amount.present? && @event.on_what.present? %>
+        <% if @event.amount > 0 %>
+          <p class="card-text text-success"><%= @event.amount.abs.to_s + "+ " + Country.human_attribute_name(@event.on_what) %></p>
+        <% else %>
+          <p class="card-text text-danger"><%= @event.amount.abs.to_s + "- " + Country.human_attribute_name(@event.on_what) %></p>
+        <% end %>
+      <% end %>
+    </p>
     <%= render "options" %>
-    <%= link_to I18n.t("event.show.lose"), { controller: "countries", action: "show", id: params[:country_id], lose: true, turn: true }, class: "btn btn-warning mt-4" %>
+    <%= link_to I18n.t("event.show.lose"), { controller: "countries", action: "show", id: params[:country_id], lose: true, turn: true }, class: "btn btn-warning mt-4" if params[:country_id]%>
   </div>
 </div>
 
