force ssl and add google analytics

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="he">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153691372-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-153691372-1');
+    </script>
+    
     <title>זה משנה הכל: המשחק</title>
     <meta property="og:title" content="זה משנה הכל: המשחק" />
     <meta property="og:description" content="הקפיטליזם משמיד את כדור הארץ. חושבות שאתן יכולות להתמודד עם זה?" />
