--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -91,11 +91,17 @@ blockquote{
     background-color: #4ADFCC;
     margin-top: 25px;
     color:white;
-    width: 325px;
+    width: 100%;
     box-shadow: 2px 2px 2px 2px #E0E0E0;
 
 }
-
+.quote-container{
+	width: 100%;
+  padding-right: 5px;
+  padding-left: 5px;
+  margin-right: auto;
+  margin-left: auto;
+}
 .quotation-mark{
 
     margin-top: -10px;
