--- a/app/views/application/game_over.html.erb
+++ b/app/views/application/game_over.html.erb
@@ -36,6 +36,12 @@
     </div>
   <% else %>
     <div>
+      <%= t('country.game_over.everyone_dead') if @country.is_everyone_dead %>
+    </div>
+    <div>
+      <%= t('country.game_over.out_of_money') if @country.is_out_of_money %>
+    </div>
+    <div>
       <%= t('country.game_over.civil_war') if @country.is_torn_apart %>
     </div>
     <div>
