--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
       gtag('config', 'UA-153691372-1');
     </script>
-    
+
     <title>זה משנה הכל: המשחק</title>
     <meta property="og:title" content="זה משנה הכל: המשחק" />
     <meta property="og:description" content="הקפיטליזם משמיד את כדור הארץ. חושבות שאתן יכולות להתמודד עם זה?" />
@@ -23,6 +23,7 @@
     <link href="https://fonts.googleapis.com/css?family=Suez+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Secular+One" rel="stylesheet">
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js'></script>
+		<script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.2/bootstrap-slider.min.js'></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%= render 'application/favicon' %>
